Partial View example

--- a/Vidly/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Vidly/Views/Movies/Random.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@*
+    This is a comment line
+*@
+
 @{ 
     var className = Model.Customers.Count > 0 ? "popular" : null;
 }
