--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Customers</h2>
 
 
 @if (Model.Count == 0)
@@ -13,10 +13,22 @@
 }
 else
 {
+    <table class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Customer</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var customer in Model)
+            {   
+                <tr>
+                    <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 <ul>
-    @foreach (var customer in Model)
-    {
-    <li>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</li>
-    }
+    
 </ul>
 }
