--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -28,7 +28,7 @@
                     <td>@customer.MembershipType.DiscountRate%</td>
                     <td>@customer.MembershipType.Name</td>
                     <td>
-                        <button class="btn-link js-delete">Delete</button>
+                        <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
                     </td>
                 </tr>
             }
@@ -40,7 +40,15 @@
     <script>
         $(document).ready(function () {
             $("#customers .js-delete").on("click", function () {
-                confirm("Are you sure you want to delete this customer?");
+                if (confirm("Are you sure you want to delete this customer?")) {
+                    $.ajax({
+                        url: "/api/customers/" + $(this).attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function () {
+                            console.log("Success");
+                        }
+                    })
+                }
             });
         });
     </script>
