--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -40,12 +40,13 @@
     <script>
         $(document).ready(function () {
             $("#customers .js-delete").on("click", function () {
+                var button = $(this);
                 if (confirm("Are you sure you want to delete this customer?")) {
                     $.ajax({
-                        url: "/api/customers/" + $(this).attr("data-customer-id"),
+                        url: "/api/customers/" + button.attr("data-customer-id"),
                         method: "DELETE",
                         success: function () {
-                            console.log("Success");
+                            button.parents("tr").remove();
                         }
                     })
                 }
