--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -13,7 +13,7 @@
 
     <div class="form-group">
         <label>Movie</label>
-        <input type="text" value="" class="form-control" />
+        <input id="movie" type="text" value="" class="form-control" />
     </div>
 
     <button class="btn btn-primary">Submit</button>
@@ -26,6 +26,7 @@
 
             var vm = {};
 
+
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
                 queryTokenizer: Bloodhound.tokenizers.whitespace,
@@ -34,6 +35,16 @@
                     wildcard: '%QUERY'
                 }
             });
+
+            var movies = new Bloodhound({
+                datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                remote: {
+                    url: '/api/movies?query?%QUERY',
+                    wildcard: '%QUERY'
+                }
+            });
+
 
             $('#customer').typeahead({
                 minLength: 3,
@@ -45,6 +56,19 @@
             }).on("typeahead:select", function (e, customer) {
                 vm.customerId = customer.id;
             });
+
+            $('#movie').typeahead({
+                minLength: 2,
+                highlight: true
+            }, {
+                name: 'movies',
+                display: 'name',
+                source: movies
+            }).on("typeahead:select", function (e, movie) {
+                vm.movieId = movie.id;
+            });
+
+
         });
     </script>
 }
