--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -16,6 +16,8 @@
         <input id="movie" type="text" value="" class="form-control" />
     </div>
 
+    <ul id="movies" class="list-group"></ul>
+
     <button class="btn btn-primary">Submit</button>
 </form>
 
@@ -24,7 +26,9 @@
     <script>
         $(document).ready(function () {
 
-            var vm = {};
+            var vm = {
+                movieIds: []
+            };
 
 
             var customers = new Bloodhound({
@@ -65,7 +69,11 @@
                 display: 'name',
                 source: movies
             }).on("typeahead:select", function (e, movie) {
-                vm.movieId = movie.id;
+                $("#movies").append("<li>" + movie.name + "</li>");
+
+                $("#movie").typeahead("val", "");
+
+                vm.movieIds.push(movie.id);
             });
 
 
