--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -45,7 +45,7 @@
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
                 queryTokenizer: Bloodhound.tokenizers.whitespace,
                 remote: {
-                    url: '/api/customers?query?%QUERY',
+                    url: '/api/customers?query=%QUERY',
                     wildcard: '%QUERY'
                 }
             });
@@ -54,7 +54,7 @@
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
                 queryTokenizer: Bloodhound.tokenizers.whitespace,
                 remote: {
-                    url: '/api/movies?query?%QUERY',
+                    url: '/api/movies?query=%QUERY',
                     wildcard: '%QUERY'
                 }
             });
