--- a/Vidly/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Vidly/Views/Rentals/New.cshtml
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
+            <input id="customer" name="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
         </div>
         
     </div>
@@ -17,13 +17,13 @@
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" type="text" value="" class="form-control" />
+            <input id="movie" name="movie" data-rule-atLeastOneMovie="true" type="text" value="" class="form-control" />
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-4">
-            <ul id="movies" class="list-group"></ul>
+            <ul id="movies" name="movies" class="list-group"></ul>
         </div>
     </div>
     
@@ -91,9 +91,13 @@
                 return vm.customerId && vm.customerId !== 0;
             }, "Please select a valid customer.");
 
-            $("#newRental").validate({
+            $.validator.addMethod("atLeastOneMovie", function () {
+                return vm.movieIds.length > 0;
+            }, "Select at least 1 movie from the list.");
+
+            var validator = $("#newRental").validate({
                 submitHandler: function () {
-                    e.preventDefault();
+
                     console.log(vm.customerId);
                     for (var i = 0; i < vm.movieIds.length; i++) {
                         console.log("movieId = " + vm.movieIds[i]);
@@ -105,10 +109,17 @@
                     })
                     .done(function () {
                         toastr.success("Rentals successfully recorded.");
+                        $("#customer").typeahead("val", "");
+                        $("#movie").typeahead("val", "");
+                        $("#movies").empty();
+
+                        vm = { movieIds: [] };
+                        validator.resetForm();
                     })
                     .fail(function () {
                         toastr.success("Something unexpected happen.");
                     });
+                    return false;
                 }
             });
 
